Ranking Question mobile was being dumb, fixed it

--- a/app/scss/brands/maytag/_answers.scss
+++ b/app/scss/brands/maytag/_answers.scss
@@ -612,6 +612,7 @@
             margin-bottom: 0;
             text-align: center;
             margin: 0px 0 6px 0;
+            display: flex;
 		}
 	}
 	.rank-numbers-list li {
