--- a/app/scss/structure/_app-main.scss
+++ b/app/scss/structure/_app-main.scss
@@ -1574,7 +1574,6 @@ a.answer-box.picture-4 {
             padding-left: 12% !important;
         }
         .label-text {
-            top: 7px !important;
             font-size: 10px !important;
         }
 
